cursive-bootstrap/tests/ui/E-SEM/E-SEM-2804.cursive
// RUN: compile-fail
// DIAG: E-SEM-2804
// SPEC: 8.17
// DESC: Class implementation weakens postcondition

class Producer {
    procedure produce(~) -> i32 |= => @result >= 0 && @result <= 100
}

record WeakProducer <: Producer {
    value: i32
    procedure produce(~) -> i32 |= => @result >= 0 {  //~ ERROR E-SEM-2804: weakens postcondition
        return ~.value
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
